Fix episode chapter heading height (too big)

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -205,6 +205,7 @@ section.main {
 		
 		h3 {
 			margin-top: 25px;
+			font-size: 20px;
 		}
 		
 		img.episodelogo {
